# fin-longtext-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: settings.yaml
data/: verify_chunks.py
plan/: db_schema.md  no_embd.md  plan.md
prompt/: tmp.md
src/: config_loader.py
src/db/: build_chunks.py  build_docs.py  chunker.py  schema.py
src/indexing/: __init__.py  build_bm25.py  build_index.py  finance_dict.txt  retriever.py
src/qa/: __init__.py  context_builder.py  csv_writer.py  post_processor.py  prompt_templates.py  question_loader.py  qwen_client.py
task/: afac_4.md
